--- a/index.html
+++ b/index.html
@@ -24,36 +24,36 @@
     <header id="header">
         <div class="inner">
             <h1 class="logo">
-                <a href="">logo
-                    <img src="img/logo.png" alt="">
-                </a>
+                	<a href="">logo
+                  	<img src="img/logo.png" alt="">
+                	</a>
             </h1>
             <ul class="gnb">
-				<li>
-						<a href="">
-							<img src="img/ico_menu01.png" alt="">
-							<p class="p">전남의 섬 검색</p>
-						</a>
-				</li>
-				<li>
-						<a href="">
-							<img src="img/ico_menu02.png" alt="">
-							<p class="p">보호구역 &<br> 공원현황</p>
-						</a>
-						
-				</li>
-				<li>
-						<a href="">
-							<img src="img/ico_menu03.png" alt="">
-							<p class="p">공지사항 &<br> 보도자료</p>
-						</a>
-				</li>
-				<li>
-						<a href="">
-							<img src="img/ico_menu04.png" alt="">
-							<p class="p">여객선 정보</p>
-						</a>
-				</li>
+			<li>
+				<a href="">
+					<img src="img/ico_menu01.png" alt="">
+					<p class="p">전남의 섬 검색</p>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="img/ico_menu02.png" alt="">
+					<p class="p">보호구역 &<br> 공원현황</p>
+				</a>
+				
+			</li>
+			<li>
+				<a href="">
+					<img src="img/ico_menu03.png" alt="">
+					<p class="p">공지사항 &<br> 보도자료</p>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="img/ico_menu04.png" alt="">
+					<p class="p">여객선 정보</p>
+				</a>
+			</li>
 			</ul>
 			<a href="" class="gnb_btn">
 				<span></span>
@@ -65,7 +65,7 @@
     <!--타이틀 영역-->
     <section id="title" class="contents">
 		<div class="background">
-			<img src="img/bg2.png" alt="">
+			<img src="img/M_visual1.jpg" alt="">
 			<div class="wave1"></div>
 			<div class="wave2"></div>
 			<div class="island"></div>
@@ -100,7 +100,7 @@
         <!--해양자원 현황-->
         <section id="resource">
             <div class="background">
-				<div class="bg"></div>
+				<img src="img/bg2.png" alt="">
 				<div class="leaf_L"></div>
 				<div class="leaf_R"></div>
 				<div class="bird"></div>
@@ -168,9 +168,7 @@
 				<div class="inner">
 					<div class="slogan">
 						<div class="center">
-							<h2>
-									우리나라 섬은 총 몇 개일까요?
-							</h2>
+							<h2>우리나라 섬은 총 몇 개일까요?</h2>
 							<p>
 								<span><strong>3,383</strong>개</span><br>(총 면적: 3,868㎢)
 							</p>
@@ -178,9 +176,9 @@
 						<div class="left">
 							<p class="back_circle"></p>
 							<p class="circle_text">유인도</p>
-							<img class="no_talk" src="" alt="">
+							<img class="no_talk" src="img/tit_ico1.png" alt="">
 							<p class="talk" src="" alt="">
-									무인도 이외의 섬으로 사람이 거주하는 섬
+								무인도 이외의 섬으로 사람이 거주하는 섬
 							</p>
 							<p>
 								<span class="yellow">464</span>개(14%)<br><span class="yellow">3,791</span>㎢(98%)
@@ -189,7 +187,7 @@
 						<div class="right">
 							<p class="back_circle"></p>
 							<p class="circle_text">무인도</p>
-							<img class="no_talk" src="" alt="">
+							<img class="no_talk" src="img/tit_ico2.png" alt="">
 							<p class="talk" src="" alt="">
 								바다로 둘러싸여 있고 만조시 해수면 위로 들어나는<br>자연적으로 형성된 땅으로 사람이 거주하지 않는 섬
 							</p>
